// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ReplyCommentForm
  disabled={false}
  disabledMessage="closed"
  id="comment-id"
  max={100}
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteRef={[Function]}
/>
`;

exports[`renders when commenting has been disabled 1`] = `
<ReplyCommentForm
  disabled={true}
  disabledMessage="commenting disabled"
  id="comment-id"
  max={100}
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteRef={[Function]}
/>
`;

exports[`renders when story has been closed 1`] = `
<ReplyCommentForm
  disabled={true}
  disabledMessage="story closed"
  id="comment-id"
  max={100}
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteRef={[Function]}
/>
`;

exports[`renders with initialValues 1`] = `
<ReplyCommentForm
  disabled={false}
  disabledMessage="closed"
  id="comment-id"
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteRef={[Function]}
/>
`;
